# quantinuum-docs

./: .gitignore  CNAME  README.md  build_landing.sh  collate.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  deploy_site.yml
_build/h-series/: genindex.html  guides.html  index.html  objects.inv  search.html  searchindex.js  support.html
_build/inquanto/: .buildinfo  404.html  genindex.html  index.html  index.txt  objects.inv  py-modindex.html  search.html  searchindex.js
_build/lambeq/: .buildinfo  404.html  cli.html  genindex.html  index.html  index.txt  lambeq.ansatz.html  lambeq.text2diagram.html  lambeq.training.html  manual-training.html  parsing.html  release-notes.html  root-api.html  searchindex.js  troubleshooting.html  uml-diagrams.html
_build/nexus/: .buildinfo  404.html  api_index.html  genindex.html  guides.html  index.html  index.txt  objects.inv  py-modindex.html  search.html  searchindex.js  support_index.html
_build/tket/: 404.html  index.html  index.txt
base_site/: 404.html  index.html  index.txt  robots.txt
base_site/404/: index.html
base_site/css/: docs-6c2398.webflow.css
content/: _toc.yml  index.rst
cypress/e2e/: utils.js  (+6 more)
e2e/: package.json
landing/: environment.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
landing_page/: environment.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
shared/: README.md  build-nav.sh  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  tsup.config.ts
tests/: package-lock.json  package.json
(+1863 files in other folders)
