[tool.poetry]
name = "docs-sandbox"
version = "0.1.0"
description = "Sandbox for testing out Sphinx build code"
authors = ["Isobel Hooper <isobel.hooper@cambridgequantum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
