[tool.poetry]
name = "docs-sandbox"
version = "0.1.0"
description = "Sandbox for testing out Sphinx build code"
authors = ["Isobel Hooper <isobel.hooper@cambridgequantum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytket = {version = "1.27.0", extras = ["zx"]}
pytket-qiskit = "0.53.0"
pytket-cirq = "0.36.0"
sphinx-autodoc-annotation = ">=1.0"
sphinx-book-theme = ">=1.1.2,<1.2.0"
sphinx = "^7.3.7"
sphinx-copybutton = "^0.5.2"
jupyter-sphinx = "^0.5.3"
quimb = "^1.8.0"
qiskit-algorithms = "^0.3.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
